--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,18 @@
 
     <groupId>de.mirkosertic.cdicron</groupId>
     <artifactId>cdicron-parent</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>CDI Cron Parent-POM</name>
     <description>The Parent-POM for the CDI cron project</description>
     <url>https://github.com/mirkosertic/timed-cdi</url>
+	
+	<properties>
+			<jakartaee-api.version>10.0.0</jakartaee-api.version>
+
+	</properties>
+
 
     <licenses>
         <license>
@@ -62,6 +68,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
+                <version>3.3.0</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -72,9 +79,11 @@
                 </executions>
             </plugin>
 
+			<!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.6.0</version>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -87,6 +96,7 @@
                     <additionalparam>-Xdoclint:none</additionalparam>
                 </configuration>
             </plugin>
+            -->
         </plugins>
 
         <pluginManagement>
@@ -96,8 +106,8 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.3</version>
                     <configuration>
-                        <source>1.7</source>
-                        <target>1.7</target>
+                        <source>17</source>
+                        <target>17</target>
                         <debug>true</debug>
                     </configuration>
                 </plugin>
@@ -117,20 +127,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>org.jboss.weld</groupId>
-                <artifactId>weld-api</artifactId>
-                <version>2.4.Final</version>
-            </dependency>
-            <dependency>
-                <groupId>org.jboss.weld.se</groupId>
-                <artifactId>weld-se-core</artifactId>
-                <version>2.4.5.Final</version>
-            </dependency>
-            <dependency>
-                <groupId>de.mirkosertic.cdicron</groupId>
-                <artifactId>cdi-cron-api</artifactId>
-                <version>${project.version}</version>
-            </dependency>
+				<groupId>jakarta.platform</groupId>
+				<artifactId>jakarta.jakartaee-api</artifactId>
+				<version>${jakartaee-api.version}</version>
+				<scope>provided</scope>
+			</dependency>
+           
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
@@ -158,6 +160,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
+                        <version>3.2.7</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
