--- a/quartzscheduler/pom.xml
+++ b/quartzscheduler/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>cdicron-parent</artifactId>
         <groupId>de.mirkosertic.cdicron</groupId>
-        <version>1.2-SNAPSHOT</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -11,14 +11,15 @@
     <name>CDI Cron Scheduler implementation based on Quartz</name>
 
     <dependencies>
-        <dependency>
-            <groupId>org.jboss.weld</groupId>
-            <artifactId>weld-api</artifactId>
+		         <dependency>
+				<groupId>jakarta.platform</groupId>
+				<artifactId>jakarta.jakartaee-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>de.mirkosertic.cdicron</groupId>
             <artifactId>cdi-cron-api</artifactId>
+             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.quartz-scheduler</groupId>
@@ -28,6 +29,7 @@
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se-core</artifactId>
+            <version>2.4.5.Final</version>
             <scope>test</scope>
         </dependency>
         <dependency>
